publish week3 demo

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week3</title>
 </head>
+
 <body>
-    <h1>Week 3</h1>
+    <!-- This is a comment-->
+    <header>
+        <h1>Company name</h1>
+        <nav>
+            <ul>
+                <li><a href="https://www.google.com">Google</a></li>
+                <li><a href="#section1">Heading and paragraphs</a></li>
+                <li><a href="#section2">Quotes</a></li>
+                <li><a href="#section3">Other Text Elements</a></li>
+                <li><a href="#section4">Different Lists</a></li>
+
+            </ul>
+        </nav>
+    </header>
+    <!-- navigation-->
+
+    <main>
+        <section id="section1">
+            <h2>Heading and Paragraphs</h2>
+            <p>
+                simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                a type specimen book. It has survived not only five centuries, but also the leap into electronic
+            </p>
+        </section>
+        <section id="section2">
+            <h2>Quotes</h2>
+            <blockquote>Love yourself! Because you're the only person that will be with you, your entire life.
+                -<cite>Mr. Bean</cite></blockquote>
+            <p>Here is an line<q>quote</q>inside a paragraph</p>
+            <p>Herr is some text that is <em>emphasized</em> or <strong>marked as important</strong>for demo.</p>
+        </section>
+        <section id="section3">
+            <h2>Other Text Elements</h2>
+            <p>I am learning <abbr title="Hypertext Marup Lanuage">HTMl</abbr> in level1</p>
+            <p>You can <mark>highlight text</mark> to draw attention.</p>
+            <p>Chemical formula for water is H<sub>2</sub>o.</p>
+            <p>In math we use super script for example x<sup>2</sup>.</p>
+            <p>Deleted text<del>represent content that is no longer relevant.</del></p>
+
+        </section>
+        <section id="section4">
+            <h2>Different Lists</h2>
+            <h3>Unorderd List</h3>
+            <ul>
+                <li>Red</li>
+                <li>Black</li>
+                <li>White</li>
+            </ul>
+            <h3>Orderd List</h3>
+            <ol>
+                <li>Step1</li>
+                <li>Step2</li>
+                <li>Step3</li>
+            </ol>
+            <h3>Description List</h3>
+            <dl>
+                <dt>Vechicle</dt>
+                <dd>Motocycle</dd>
+
+                <dt>Type</dt>
+                <dd>Two Wheels</dd>
+
+                <dt>Liscence</dt>
+                <dd>FDM 363</dd>
+        
+            </dl>
+        </section>
+
+    </main>
+    <footer>
+        <hr>
+        <p>Contact Us at:
+        <address>
+            345 Demo St, Fake City, K2F56 <br>Email: abd@text.com
+        </address>
+        </p>
+    </footer>
 </body>
+
 </html>
