--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,11 +10,13 @@
         <h1>Yan Bao</h1>
     </header>
     <main>
-        <h2>About Me</h2>
-        <p>I am already middle-aged, but I made the bravest decision of my life. I quit my job and came to Canada, where the temperature was about -20<sup>o</sup>c, to study and become a student at Algonquin College. <abbr title="Algonquin College">AC</abbr> places great emphasis on <em>learning practical skills</em>, which is exactly what I lack.</p>
-        <p>I particularly appreciate a famous saying</p>
-        <blockquote>You are never too old to set another goal or to dream a new dream.-<cite>C.S. Lewis</cite></blockquote>
-        <p>Age should not stop us from learning. Although the interactive media design major is quite challenging for me, I still want to break through myself and continue to learn and try new fields and content. Maybe I will find a new hobby and even become an interactive media designer.</p>
+        <article> 
+            <h2>About Me</h2>
+            <p>I am already middle-aged, but I made the bravest decision of my life. I quit my job and came to Canada, where the temperature was about -20<sup>o</sup>c, to study and become a student at Algonquin College. <abbr title="Algonquin College">AC</abbr> places great emphasis on <em>learning practical skills</em>, which is exactly what I lack.</p>
+            <p>I particularly appreciate a famous saying</p>
+            <blockquote>You are never too old to set another goal or to dream a new dream.-<cite>C.S. Lewis</cite></blockquote>
+            <p>Age should not stop us from learning. Although the interactive media design major is quite challenging for me, I still want to break through myself and continue to learn and try new fields and content. Maybe I will find a new hobby and even become an interactive media designer.</p>
+        </article>
     </main>
     <footer>
         <hr />
