--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -3,19 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Self-introduction</title>
 </head>
 <body>
     <header>
         <h1>Yan Bao</h1>
+        <nav>
+            <ul>
+                <li><a href="./notes.html">Notes</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <article> 
             <h2>About Me</h2>
+            <img src="./images/Ada.jpg" alt="avatar" width="300px">
             <p>I am already middle-aged, but I made the bravest decision of my life. I quit my job and came to Canada, where the temperature was about -20<sup>o</sup>c, to study and become a student at Algonquin College. <abbr title="Algonquin College">AC</abbr> places great emphasis on <em>learning practical skills</em>, which is exactly what I lack.</p>
             <p>I particularly appreciate a famous saying</p>
             <blockquote>You are never too old to set another goal or to dream a new dream.-<cite>C.S. Lewis</cite></blockquote>
             <p>Age should not stop us from learning. Although the interactive media design major is quite challenging for me, I still want to break through myself and continue to learn and try new fields and content. Maybe I will find a new hobby and even become an interactive media designer.</p>
+            <h3>My hobbies:</h3>
+            <ul>
+                <li>Reading</li>
+                <li>Cooking</li>
+                <li>Jogging</li>
+            </ul>
         </article>
     </main>
     <footer>
