--- a/week3/index.html
+++ b/week3/index.html
@@ -23,10 +23,12 @@
         </nav>
     </header>
     <!-- navigation-->
+     
 
     <main>
         <section id="section1">
             <h2>Heading and Paragraphs</h2>
+        
             <p>
                 simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                 dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
@@ -43,6 +45,7 @@
         <section id="section3">
             <h2>Other Text Elements</h2>
             <p>I am learning <abbr title="Hypertext Marup Lanuage">HTMl</abbr> in level1</p>
+            <p>I am learning HTML in level1</p>
             <p>You can <mark>highlight text</mark> to draw attention.</p>
             <p>Chemical formula for water is H<sub>2</sub>o.</p>
             <p>In math we use super script for example x<sup>2</sup>.</p>
