--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -17,7 +17,7 @@
     <main>
         <article> 
             <h2>About Me</h2>
-            <img src="./images/Ada.jpg" alt="avatar" width="300px">
+            <img src="./images/Ada.jpg" alt="avatar" width="300">
             <p>I am already middle-aged, but I made the bravest decision of my life. I quit my job and came to Canada, where the temperature was about -20<sup>o</sup>c, to study and become a student at Algonquin College. <abbr title="Algonquin College">AC</abbr> places great emphasis on <em>learning practical skills</em>, which is exactly what I lack.</p>
             <p>I particularly appreciate a famous saying</p>
             <blockquote>You are never too old to set another goal or to dream a new dream.-<cite>C.S. Lewis</cite></blockquote>
@@ -31,7 +31,7 @@
         </article>
     </main>
     <footer>
-        <hr />
+        <hr>
         <p>©2024 Yan Bao</p>
     </footer>
 </body>
