--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -30,8 +30,8 @@
                 <dt>&lt;input&gt;</dt>
                 <dd>The input tag is used to create interactive controls for web-based forms in order to accept data from the user.</dd>
 
-                <dt>&lt;script&gt;</dt>
-                <dd>The script is used to embed executable code or data.</dd>
+                <dt>&lt;section&gt;</dt>
+                <dd>The section tag represents a generic standalone section of a document, which doesn't have a more specific semantic element to represent it. </dd>
         
             </dl>
         </article>
