--- a/final-project/index.html
+++ b/final-project/index.html
@@ -3,31 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>final-project</title>
 </head>
 <body>
     <header>
         <!-- The same image for mobile and desktop, but different style. -->
-        <div>
-            <img src="./images/logo.png" alt="logo">
-        </div>       
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <form action="#">
-            <input type="text">
-            <!-- There is a frame outside of the search button -->
+        <div class="head-container">
             <div>
-                <span class="material-symbols-outlined">search</span>
-            </div>
-        </form>
+                <img src="./images/logo.png" alt="logo">
+            </div>       
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <form action="#">
+                <input type="text">
+                <!-- There is a frame outside of the search button -->
+                <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </form>
+        </div>     
     </header>
 
     <main>
@@ -38,7 +39,7 @@
                 <h1>Welcome to Three Star Media</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nam facilis. Obcaecati cum, reprehenderit laboriosam explicabo sequi tenetur repellendus illo?</p>
                 <div>
-                    <a href="#">Connect with us <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Connect with us <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>
         </section>
@@ -57,7 +58,7 @@
                 <h3>Digital Transformation</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat fugit modi sed quis necessitatibus voluptate doloribus eligendi eius odit quia?</p>
                 <div>
-                    <a href="#">Digital Plans <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Digital Plans <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>
             <div>
@@ -65,7 +66,7 @@
                 <h3>marketing</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat fugit modi sed quis necessitatibus voluptate doloribus eligendi eius odit quia?</p>
                 <div>
-                    <a href="#">Marketing Plans <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Marketing Plans <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>
             <div>
@@ -73,7 +74,7 @@
                 <h3>Video Production</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat fugit modi sed quis necessitatibus voluptate doloribus eligendi eius odit quia?</p>
                 <div>
-                    <a href="#">Video Plans <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Video Plans <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>
             <div>
@@ -81,7 +82,7 @@
                 <h3>Web Development</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat fugit modi sed quis necessitatibus voluptate doloribus eligendi eius odit quia?</p>
                 <div>
-                    <a href="#">Web Plans <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Web Plans <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>
             <div>
@@ -89,7 +90,7 @@
                 <h3>Print</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat fugit modi sed quis necessitatibus voluptate doloribus eligendi eius odit quia?</p>
                 <div>
-                    <a href="#">Print Plans <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Print Plans <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>
         </section>
@@ -100,7 +101,7 @@
                 <h2>Our Vision</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente nihil eaque dolores exercitationem incidunt in?</p>
                 <div>
-                    <a href="#">Learn More <span class="material-symbols-outlined">arrow_right</span></a>
+                    <a href="#">Learn More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
             </div>            
         </section>
@@ -172,8 +173,9 @@
         <!-- There is a anchor tag. -->
         <div>
             <p>©Copyright Three Star Mdeia, 2020</p>
-            <p>All images are taken from <a href="#">Unsplash</a></p>
+            <p>All images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/60849a4a00.js" crossorigin="anonymous"></script>
 </body>
 </html>
